<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">NovaLines</string>
    <string name="top_stories_section_id" translatable="false">editorsPicks</string>
    <string name="most_visited_section_id" translatable="false">mostViewed</string>
    <string name="world_news_section_id" translatable="false">world</string>
    <string name="top_stories_section_name">Top Stories</string>
    <string name="most_visited_section_name">Most Visited</string>
    <string name="world_news_section_name">World news</string>
    <string name="show_fields_parameter" translatable="false">show-fields</string>
    <string name="editor_picks_parameter" translatable="false">show-editors-picks</string>
    <string name="most_viewed_parameter" translatable="false">show-most-viewed</string>
    <string name="not_implemented_text_info">Not Implemented</string>
    <string name="action_refresh">Refresh</string>
    <string name="snackbar_action_undo">UNDO</string>
    <string name="settings_title_str">Settings</string>
    <string name="about_title_str">About</string>
    <string name="headlines_title_str">Headlines</string>
    <string name="bookmarked_news_title_str">Bookmarked News</string>
    <string name="favorites_title_str">Favorited News</string>
    <string name="random_news_title_str">Random News</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="pref_sort_results_category_title">Sort Results</string>
    <string name="pref_sort_by_key" translatable="false">order-by</string>
    <string name="pref_sort_by_title">Sort by</string>
    <string name="pref_sort_by_dialog_title">Select on how you wish the results to be sorted</string>
    <string name="pref_sort_by_default" translatable="false">newest</string>
    <string name="pref_sort_on_key" translatable="false">order-date</string>
    <string name="pref_sort_on_title">Sort based on</string>
    <string name="pref_sort_on_dialog_title">Select the type of date used for sorting the results</string>
    <string name="pref_sort_on_default" translatable="false">published</string>
    <string name="pref_pagination_category_title">Pagination</string>
    <string name="pref_items_per_page_key" translatable="false">page-size</string>
    <string name="pref_items_per_page_title">News items per page</string>
    <string name="pref_items_per_page_dialog_title">Select the number of News items to show in a page</string>
    <string name="pref_start_period_category_title">Start Period for the News</string>
    <string name="pref_start_period_manual_override_key" translatable="false">start-period-manual-override</string>
    <string name="pref_start_period_manual_override_title">Start Period Preset/Manual</string>
    <string name="pref_start_period_preset_key" translatable="false">start-period-preset</string>
    <string name="pref_start_period_preset_title">Preset Start Period</string>
    <string name="pref_start_period_preset_dialog_title">Preset Start Period to</string>
    <string name="pref_start_period_preset_default">Start of the Week</string>
    <string name="pref_start_period_buffer_key" translatable="false">start-period-buffer</string>
    <string name="pref_start_period_buffer_title">Buffer to Start Period</string>
    <string name="pref_start_period_buffer_dialog_title">Buffer days prior to start period</string>
    <string name="pref_start_period_manual_key" translatable="false">from-date</string>
    <string name="pref_start_period_manual_title">Specify Start Period</string>
    <string name="pref_start_period_manual_dialog_title">Manually pick the Start Period</string>
    <string name="predetermined_date_summary_text">
        
        Preset: <xliff:g id="date_str">%1$s</xliff:g>
    </string>
    <string name="manual_date_summary_text">
        
        Manual: <xliff:g example="January 01, 2017" id="date_str">%1$s</xliff:g>
    </string>
    <string name="buffer_days_summary_text">
        
        <xliff:g example="7" id="buffer_days">%1$d</xliff:g> days
    </string>
    <string name="pref_defaults_category_title">Defaults</string>
    <string name="pref_reset_settings_key" translatable="false">reset</string>
    <string name="pref_reset_settings_title">Reset Settings</string>
    <string name="pref_reset_settings_dialog_msg">Reset all to defaults?</string>
    <string name="pref_page_index_key" translatable="false">page</string>
    <string name="pref_page_max_value_key" translatable="false">endIndex</string>
    <string name="pref_today_date_key" translatable="false">date-today</string>
    <string name="highlights_title_str">Highlights</string>
    <string name="news_headline_text">
        
        News since <xliff:g example="January 01, 2017" id="date_str">%1$s</xliff:g>
    </string>
    <string name="hl_new_stories_text_line">New Stories in</string>
    <string name="no_authors_found_default_text">Anonymous</string>
    <string name="no_published_date_default_text">Unknown Date</string>
    <string name="article_action_share">Share News</string>
    <string name="article_action_read_later">Read Later</string>
    <string name="article_action_favorite">Favorite This</string>
    <string name="article_action_open_section">Open News Section</string>
    <string name="article_share_chooser_title">Share the news link with …</string>
    <string name="article_favorited_snack">News marked as Favorite [ic_favorite_selected].</string>
    <string name="article_bookmarked_snack">News bookmarked [ic_bookmark_selected].</string>
    <string name="article_favorited_undo_snack">Favorited News deleted.</string>
    <string name="article_bookmarked_undo_snack">Bookmarked News deleted.</string>
    <string name="more_news_tab_title_text" translatable="false"> + </string>
    <string name="news_not_subscribed_title_text">
        <xliff:g example="Sport" id="news_category">\'%1$s\'</xliff:g> Not subscribed
    </string>
    <string name="news_not_subscribed_msg">
        You are currently not subscribed to &lt;b&gt;<xliff:g example="Sport" id="news_category">\'%1$s\'</xliff:g>&lt;/b&gt; News Feed. Please use the button below to subscribe the &lt;b&gt;<xliff:g example="Sport" id="news_category">\'%1$s\'</xliff:g>&lt;/b&gt; News Feed.
    </string>
    <string name="news_not_subscribed_btn_text">
        <xliff:g example="Sport" id="news_category">%1$s</xliff:g>
    </string>
    <string name="more_news_subscribe_title_text">Subscribe to More Feeds</string>
    <string name="more_news_subscribe_msg">For more News Feeds from different categories, click the menu icon [ic_newspaper_add_black] to subscribe the feeds of your choice.</string>
    <string name="more_news_subscribe_btn_text">Subscribe More</string>
    <string name="more_news_action_subscribe">@string/more_news_subscribe_btn_text</string>
    <string name="more_news_subscribe_acton_toast">Multiple News Category Feed subscription will be available in the future</string>
    <string name="page_number_picker_cancel_button_text">Cancel</string>
    <string name="page_number_picker_set_button_text">Set</string>
    <string name="page_number_picker_title_text">Jump to Page</string>
    <string name="navigate_page_first_msg">Loading the First page…</string>
    <string name="navigate_page_last_msg">Loading the Last page…</string>
    <string name="navigate_page_x_msg">Loading Page <xliff:g example="1" id="page_number">%1$d</xliff:g>…</string>
    <string name="navigate_page_sel_msg">Loading Selected Page <xliff:g example="1" id="page_number">%1$d</xliff:g>…</string>
    <string name="bookmark_no_results_text">This page displays the News Articles bookmarked for reading later. To Bookmark an Article, click the &lt;b&gt;menu options icon&lt;/b&gt; [ic_news_item_popup_menu] on any News Article\'s Card and select &lt;b&gt;Read later&lt;/b&gt;.</string>
    <string name="favorite_no_results_text">This page displays the News Articles you liked. To Favorite an Article, click the &lt;b&gt;menu options icon&lt;/b&gt; [ic_news_item_popup_menu] on any News Article\'s Card and select &lt;b&gt;Favorite this&lt;/b&gt;.</string>
    <string name="nw_error_title_text">Network Error</string>
    <string name="nw_error_text_msg">Seems like there is an issue with the network connectivity.\n\nCheck whether the Airplane mode is Active, [ic_airplanemode_black] may be seen in the above status bar. Turn this OFF if it is seen.\n\nValidate the Network settings and visit us back once done.</string>
    <string name="nw_error_settings_btn_text">Check Network</string>
    <string name="no_feed_reason_text">This can happen due to the following reasons -</string>
    <string name="no_feed_title_text">No Feed Available</string>
    <string name="nf_app_settings_resolution_text">The Start date of the News might be incorrectly set. Open the app settings [ic_settings_black] and reset all to defaults.</string>
    <string name="nf_network_settings_resolution_text">Network Connectivity might be stale. Enable and disable the Airplane mode [ic_airplanemode_black] to see if it resolves.</string>
    <string name="nf_refresh_resolution_text">No News feed available from Guardian News Server. Try refreshing [ic_refresh_black] or visit us back after sometime.</string>
    <string name="nf_search_resolution_text">The Search query entered might NOT have yielded any results. Please validate the query or test with something meaningful like &lt;b&gt;Music&lt;/b&gt;.</string>
    <string name="nf_app_settings_btn_text">Check App Settings</string>
    <string name="nf_nw_settings_btn_text">Check Network</string>
    <string name="nf_refresh_btn_text">Refresh</string>
    <string name="random_news_intro_text">This page displays the News Articles based on your search query. To Search for the News, click the &lt;b&gt;Search box&lt;/b&gt; above and enter some words to search. Search results can be refined with the use of &lt;b&gt;AND/OR/NOT&lt;/b&gt; keywords along with logical braces &lt;b&gt;\'(\)\'&lt;/b&gt;\; also with quotation marks &lt;b&gt;\'"\'&lt;/b&gt; for exact phrase search.</string>
    <string name="random_news_page_info_text">Search Intro</string>
    <string name="search_news_hint_text">Search News…</string>
    <string name="abt_content_textline_1">App designed and developed by &lt;b&gt;Kaushik N Sanji&lt;/b&gt; as part of the project coursework done for the &lt;b&gt;Android Basics Nanodegree&lt;/b&gt; course offered by &lt;b&gt;Udacity&lt;/b&gt;.</string>
    <string name="abt_content_textline_2">
        App acts as a client to the &lt;b&gt;Guardian News&lt;/b&gt;.
        It implements the &lt;b&gt;section&lt;/b&gt; and &lt;b&gt;search&lt;/b&gt; endpoints.
        It parses the News Feed for the subscribed News category or the searched News and displays the list of News Articles in Cards.
        On top of these News Articles, many useful features are provided, like -&lt;br/&gt;
        \u2022 Sharing the News Article.
        &lt;br/&gt;\u2022 Saving the News Article to Bookmarks for Reading later.
        &lt;br/&gt;\u2022 Saving the News Article to Favorites.
        &lt;br/&gt;\u2022 Jumping to a particular News Category.
    </string>
    <string name="news_api_link" translatable="false">http://open-platform.theguardian.com/documentation</string>
    <string name="udacity_course_link" translatable="false">https://in.udacity.com/course/android-basics-nanodegree-by-google--nd803</string>
    <string name="github_profile_link" translatable="false">https://github.com/kaushiknsanji</string>
    <string name="linkedin_profile_link" translatable="false">https://www.linkedin.com/in/kaushiknsanji</string>
    <string name="abt_pwd_by_text">Powered by</string>
</resources>