<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kaushiknsanji.novalines.AboutActivity">

    <!-- For the Custom Toolbar -->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="@dimen/app_bar_elevation">

        <!-- App Toolbar -->
        <include
            android:id="@+id/toolbar_id"
            layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways|snap" />

    </android.support.design.widget.AppBarLayout>

    <!-- Content of the Activity -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/defaultBackgroundColor"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/abt_card_parent_padding">

            <android.support.v7.widget.CardView
                android:id="@+id/abt_card_id"
                style="@style/AboutInfoCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/abt_info_content_internal_margin">

                    <ImageView
                        android:id="@+id/abt_app_icon_id"
                        style="@style/ConstraintTopCenterHorizontalStyle"
                        android:layout_width="@dimen/match_constraint_0dp"
                        android:layout_height="@dimen/match_constraint_0dp"
                        android:background="@color/ic_launcher_background"
                        app:layout_constraintDimensionRatio="2:1"
                        app:srcCompat="@mipmap/ic_launcher_foreground" />

                    <TextView
                        android:id="@+id/abt_title_text_id"
                        style="@style/ConstraintCenterHorizontalStyle"
                        android:layout_width="@dimen/match_constraint_0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/abt_info_text_content_margin"
                        android:layout_marginLeft="@dimen/abt_info_text_content_margin"
                        android:layout_marginRight="@dimen/abt_info_text_content_margin"
                        android:layout_marginStart="@dimen/abt_info_text_content_margin"
                        android:layout_marginTop="@dimen/abt_info_content_internal_margin"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/abt_title_text_size"
                        app:layout_constraintBottom_toTopOf="@+id/abt_text_1_id"
                        app:layout_constraintTop_toBottomOf="@+id/abt_app_icon_id"
                        app:layout_constraintVertical_chainStyle="spread_inside" />

                    <TextView
                        android:id="@+id/abt_text_1_id"
                        style="@style/AboutContentTextStyle"
                        app:layout_constraintBottom_toTopOf="@+id/abt_text_2_id"
                        app:layout_constraintEnd_toEndOf="@+id/abt_title_text_id"
                        app:layout_constraintLeft_toLeftOf="@+id/abt_title_text_id"
                        app:layout_constraintRight_toRightOf="@+id/abt_title_text_id"
                        app:layout_constraintStart_toStartOf="@+id/abt_title_text_id"
                        app:layout_constraintTop_toBottomOf="@+id/abt_title_text_id"
                        tools:text="@string/abt_content_textline_1" />

                    <TextView
                        android:id="@+id/abt_text_2_id"
                        style="@style/AboutContentTextStyle"
                        app:layout_constraintBottom_toTopOf="@+id/abt_pwd_by_layout_id"
                        app:layout_constraintEnd_toEndOf="@+id/abt_title_text_id"
                        app:layout_constraintLeft_toLeftOf="@+id/abt_title_text_id"
                        app:layout_constraintRight_toRightOf="@+id/abt_title_text_id"
                        app:layout_constraintStart_toStartOf="@+id/abt_title_text_id"
                        app:layout_constraintTop_toBottomOf="@+id/abt_text_1_id"
                        tools:text="@string/abt_content_textline_2" />

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/abt_pwd_by_layout_id"
                        style="@style/ConstraintCenterHorizontalStyle"
                        android:layout_width="@dimen/match_constraint_0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/abt_pwd_by_layout_margin_top"
                        android:background="@color/abtPwdByBackgroundBlueColor"
                        android:padding="@dimen/abt_pwd_by_layout_content_padding"
                        app:layout_constraintBottom_toTopOf="@+id/abt_github_image_id"
                        app:layout_constraintTop_toBottomOf="@+id/abt_text_2_id">

                        <ImageView
                            android:id="@+id/abt_guardian_roundel_image_id"
                            style="@style/ConstraintLeftCenterVerticalStyle"
                            android:layout_width="@dimen/abt_guardian_roundel_image_size"
                            android:layout_height="@dimen/abt_guardian_roundel_image_size"
                            app:layout_constraintEnd_toStartOf="@+id/abt_theguardian_image_id"
                            app:layout_constraintHorizontal_chainStyle="packed"
                            app:layout_constraintRight_toLeftOf="@+id/abt_theguardian_image_id"
                            app:srcCompat="@drawable/ic_guardian_roundel" />

                        <TextView
                            android:id="@+id/abt_pwd_by_text_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/abt_pwd_by_text"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/abt_pwd_by_text_size"
                            app:layout_constraintEnd_toEndOf="@+id/abt_theguardian_image_id"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintLeft_toLeftOf="@+id/abt_theguardian_image_id"
                            app:layout_constraintRight_toRightOf="@+id/abt_theguardian_image_id"
                            app:layout_constraintStart_toStartOf="@+id/abt_theguardian_image_id"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/abt_theguardian_image_id"
                            android:layout_width="@dimen/abt_theguardian_image_width"
                            android:layout_height="@dimen/match_constraint_0dp"
                            android:layout_marginLeft="@dimen/abt_theguardian_image_left"
                            android:layout_marginStart="@dimen/abt_theguardian_image_left"
                            android:layout_marginTop="@dimen/abt_theguardian_image_margin_top"
                            android:scaleType="fitStart"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0"
                            app:layout_constraintLeft_toRightOf="@+id/abt_guardian_roundel_image_id"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/abt_guardian_roundel_image_id"
                            app:layout_constraintTop_toBottomOf="@+id/abt_pwd_by_text_id"
                            app:srcCompat="@drawable/ic_theguardian_logo" />

                    </android.support.constraint.ConstraintLayout>

                    <ImageView
                        android:id="@+id/abt_udacity_image_id"
                        style="@style/AboutClickableImageViewStyle"
                        app:layout_constraintBottom_toBottomOf="@+id/abt_github_image_id"
                        app:layout_constraintEnd_toStartOf="@+id/abt_github_image_id"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/abt_github_image_id"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/abt_github_image_id"
                        app:srcCompat="@drawable/ic_udacity" />

                    <ImageView
                        android:id="@+id/abt_github_image_id"
                        style="@style/AboutClickableImageViewStyle"
                        android:layout_marginTop="@dimen/abt_info_content_internal_margin"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/abt_linkedin_image_id"
                        app:layout_constraintLeft_toRightOf="@+id/abt_udacity_image_id"
                        app:layout_constraintRight_toLeftOf="@+id/abt_linkedin_image_id"
                        app:layout_constraintStart_toEndOf="@+id/abt_udacity_image_id"
                        app:layout_constraintTop_toBottomOf="@+id/abt_pwd_by_layout_id"
                        app:srcCompat="@drawable/ic_github" />

                    <ImageView
                        android:id="@+id/abt_linkedin_image_id"
                        style="@style/AboutClickableImageViewStyle"
                        app:layout_constraintBottom_toBottomOf="@+id/abt_github_image_id"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/abt_github_image_id"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/abt_github_image_id"
                        app:layout_constraintTop_toTopOf="@+id/abt_github_image_id"
                        app:srcCompat="@drawable/ic_linkedin" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

        </FrameLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
